# MineSweeper

./: .gitignore  .pre-commit-config.yaml  README.md  db.ini.template  field.py  layout.py  main.py  player.py  pyproject.toml  requirements.txt  scoredata.py
src/: main.py
src/game_logic/: field.py
src/players/: player_class.py  random_player.py
src/score/: scoredata.py
src/screens/: first_screen.py  game_screen.py
